<resources>
    <string name="app_name">Quiz App</string>

    <string name="submit_button">Submit</string>





    <string name="first_qustion">In 1986, Diego Maradona’s brilliant performance helped Brazil win the World Cup ?</string>
    <string name="first_qustion_header">Question 1</string>
    <string name="wrong_button">False</string>
    <string name="correct_button">True</string>

    <string name="second_qustion">Who have won the UEFA European Championship ?</string>
    <string name="second_qustion_header">Question 2</string>
    <string name="second_qustion_option1">Portugal</string>
    <string name="second_qustion_option2">Greek</string>
    <string name="second_qustion_option3">Belgium</string>
    <string name="second_qustion_option4">Italy</string>

    <string name="third_qustion">Who have won the FIFA World Cup in 1998 ?</string>
    <string name="third_qustion_header">Question 3</string>
    <string name="third_qustion_option1">Brazil</string>
    <string name="third_qustion_option2">France</string>
    <string name="third_qustion_option3">Germany</string>
    <string name="third_qustion_option4">Italy</string>

    <string name="forth_qustion_header">Question 4</string>
    <string name="forth_qustion">Who scored for Germany against Argentina in the 2014 FIFA World Cup Final ?</string>
    <string name="forth_qustion_text_input">Answer</string>
    <string name="forth_qustion_answer">Mario Gotze</string>
</resources>
